docs-archive/apache-airflow-providers-informatica/0.1.0/_sources/_api/airflow/providers/informatica/extractors/informatica/index.rst.txt
airflow.providers.informatica.extractors.informatica
====================================================

.. py:module:: airflow.providers.informatica.extractors.informatica


Classes
-------

.. autoapisummary::

   airflow.providers.informatica.extractors.informatica.InformaticaLineageExtractor


Module Contents
---------------

.. py:class:: InformaticaLineageExtractor(edc_hook)

   Bases: :py:obj:`airflow.utils.log.logging_mixin.LoggingMixin`


   Extracts lineage information from Informatica EDC and converts to Airflow Assets.


   .. py:attribute:: edc_hook


   .. py:method:: get_object(object_id)

      Return Informatica catalog object by id via EDC hook.

      Args:
          object_id (str): Informatica object id.

      Returns:
          dict[str, Any]: Informatica catalog object.



   .. py:method:: create_lineage_link(source_object_id, target_object_id)

      Create a lineage link between source and target objects via EDC hook.

      Args:
          source_object_id (str): Source Informatica object id.
          target_object_id (str): Target Informatica object id.

      Returns:
          dict[str, Any]: Result of lineage link creation.



