docs-archive/apache-airflow-providers-informatica/0.2.1/_sources/_api/airflow/providers/informatica/extractors/informatica/index.rst.txt
airflow.providers.informatica.extractors.informatica
====================================================

.. py:module:: airflow.providers.informatica.extractors.informatica


Classes
-------

.. autoapisummary::

   airflow.providers.informatica.extractors.informatica.InformaticaLineageExtractor


Module Contents
---------------

.. py:class:: InformaticaLineageExtractor(edc_hook)

   Bases: :py:obj:`airflow.utils.log.logging_mixin.LoggingMixin`


   Extracts lineage information from Informatica EDC and converts to Airflow Assets.


   .. py:attribute:: edc_hook


   .. py:method:: get_object(object_id)

      Return Informatica catalog object by id via EDC hook.



   .. py:method:: create_lineage_link(source_object_id, target_object_id)

      Create a lineage link between source and target objects via EDC hook.



   .. py:method:: find_object_id(catalog_name, database_name, table_name)

      Find Informatica catalog object id by catalog, database, and table name.

      Resolves the EDC object identifier by searching for the table by name,
      then validating it belongs to the expected schema/database hierarchy.

      :param catalog_name: Name of the catalog (used to disambiguate schemas).
      :param database_name: Name of the database / schema.
      :param table_name: Name of the table or view.
      :return: Informatica catalog object id if found, else None.



